--- a/src/app/posts/post-list/post-list.component.html
+++ b/src/app/posts/post-list/post-list.component.html
@@ -7,8 +7,8 @@
         </mat-expansion-panel-header>
             <p>{{ post.content }}</p>
         <mat-action-row>
-            <button mat-button color="primary">EDIT</button>
-            <button mat-button color="warn">DELETE</button>
+            <button mat-raised-button color="primary">EDIT</button>
+            <button mat-raised-button color="warn" (click)="onDelete(post.id)">DELETE</button>
         </mat-action-row>
     </mat-expansion-panel>
 </mat-accordion>
