--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,8 @@
-<mat-toolbar color="primary">MyMessages</mat-toolbar>
+<mat-toolbar color="primary">
+    <span routerLink="/">MyMessages</span>
+    <ul >
+       <li> 
+            <a routerLink="/create">New Post</a>
+        </li>
+    </ul>
+</mat-toolbar>
