--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,8 +1,6 @@
 <mat-toolbar color="primary">
-    <span routerLink="/">MyMessages</span>
-    <ul >
-       <li> 
-            <a routerLink="/create">New Post</a>
-        </li>
-    </ul>
+    <button mat-raised-button color="accent"><span routerLink="/">MyMessages</span></button>&nbsp;
+    <button mat-raised-button color="accent"><span routerLink="/create">New Post</span></button>
+    
+     
 </mat-toolbar>
