--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,12 @@
 <mat-toolbar color="primary">
+  <button mat-raised-button color="accent"><span routerLink="/">Recipe-List</span></button>&nbsp;
+  <button mat-raised-button color="accent"><span routerLink="/create">New Recipe</span></button>
+  
+   
+</mat-toolbar>
+
+
+<!-- <mat-toolbar color="primary">
   <span>
     <a routerLink="/">MyMessages</a>
   </span>
@@ -8,4 +16,4 @@
       <a mat-button routerLink="/create" routerLinkActive="mat-accent">New Post</a>
     </li>
   </ul>
-</mat-toolbar>
+</mat-toolbar> -->
