--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,4 +1,30 @@
-ul {
+.example-spacer {
+  flex: 1 1 auto;
+}
+/* #account{
+  background-image: url('C:/Users/Admin/Desktop/Rohit/Angular/My-Work/WORK-Repository/src/assets/images/scanner_user.jpg');
+    background-size: cover;
+} */
+.example-container {
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  border: 1px solid #555;
+}
+
+mat-drawer-content {
+  padding: 12px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.example-sidenav{
+  padding: 1px;
+  width: 18%;
+}
+
+/* ul {
   list-style: none;
   padding: 0;
   margin: 0;
@@ -7,8 +33,8 @@ ul {
 a {
   text-decoration: none;
   color: white;
-}
+}*/
 
-.spacer {
-  flex: 1 1 auto;
-}
+ /* .spacer {
+  flex: 1 1 auto; 
+} */
