--- a/src/app/posts/post-create/post-create.component.css
+++ b/src/app/posts/post-create/post-create.component.css
@@ -1,10 +1,18 @@
-mat-form-field,
+main{
+  margin-left: 350px;
+  margin-top: 80px;
+  width: 600px;
+  height: 600px;
+}
+
+
 textarea {
   width: 100%;
 }
 
 mat-spinner {
   margin: auto;
+  
 }
 
 input[type="file"] {
