--- a/src/app/posts/post-list/post-list.component.css
+++ b/src/app/posts/post-list/post-list.component.css
@@ -1,9 +1,8 @@
 :host {
   display: block;
-  margin-top: 1rem;
-  
-   
+  margin-top: 1rem;  
 }
+
 
 mat-spinner {
   margin: auto;
@@ -33,12 +32,13 @@ mat-spinner {
   margin-right: 10px;
 }
 
-/* .example-card {
+.example-card {
   max-width: 335px;
-  float: left;
+  float: left;  
   margin-right: 10px;
+  margin-top: 10px;
  
-} */
+}
 
 /* .example-header-image {
   background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
