--- a/src/app/posts/post-list/post-list.component.html
+++ b/src/app/posts/post-list/post-list.component.html
@@ -21,22 +21,25 @@
 <br><br> -->
 
   <mat-spinner *ngIf="isLoading"></mat-spinner>
-<mat-card class="example-card" *ngFor="let post of posts">
-  <mat-card-header >
-    <div mat-card-avatar class="example-header-image"></div>
-    <mat-card-title>{{ post.title }}</mat-card-title>
-  </mat-card-header>
-  <img mat-card-image class="post-image" [src]="post.imagePath" [alt]="post.title">
-  <mat-card-content>
-    <p>
-      {{ post.content }}
-    </p>
-  </mat-card-content>
-  <mat-card-actions>
-    <a mat-raised-button color="primary" [routerLink]="['/edit', post.id]">EDIT</a>
-      <button mat-raised-button color="warn" (click)="onDelete(post.id)">DELETE</button>
-  </mat-card-actions>
-</mat-card> 
-<p class="info-text mat-body-1" *ngIf="posts.length <= 0 && !isLoading">No posts added yet!</p>
+  <div class="container">
+    <mat-card class="example-card" *ngFor="let post of posts">
+      <mat-card-header >
+        
+        <mat-card-title>{{ post.title }}</mat-card-title>
+      </mat-card-header>
+      <img mat-card-image class="post-image" height="300" [src]="post.imagePath" [alt]="post.title">
+      <mat-card-content>
+        <p>
+          {{ post.content }}
+        </p>
+      </mat-card-content>
+      <mat-card-actions>
+        <a mat-raised-button color="primary" [routerLink]="['/edit', post.id]">EDIT</a>
+          <button mat-raised-button color="warn" (click)="onDelete(post.id)">DELETE</button>
+      </mat-card-actions>
+    </mat-card> 
+    <p class="info-text mat-body-1" *ngIf="posts.length <= 0 && !isLoading">No posts added yet!</p>
+  </div>
+
 
 
