--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -10,10 +10,12 @@
         <mat-form-field class="example-full-width" appearance="outline">
             <mat-label>Email</mat-label>
             <input type="email" matInput name="email" ngModel #emailInput="ngModel" required>
+            <mat-error *ngIf="emailInput.invalid">Please enter a valid email.</mat-error>
           </mat-form-field><br>
           <mat-form-field class="example-full-width" appearance="outline">
               <mat-label>Password</mat-label>
               <input type="password" matInput name="password" ngModel #passwordInput="ngModel" required>
+              <mat-error *ngIf="passwordInput.invalid">Please enter a valid email.</mat-error>
             </mat-form-field>
             <hr>
             <div>
