--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -17,6 +17,7 @@ mat-drawer-content {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  height: 100%;
 }
 
 .example-sidenav{
