--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -1,4 +1,4 @@
-<form (submit)="onSignUp(signupForm)" #signupForm="ngForm">
+<form (submit)="onSignup(signupForm)" #signupForm="ngForm">
     <mat-card class="signupCard">
         <mat-card-title>
             Signup Form
