--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -16,10 +16,10 @@
         <button mat-raised-button color="accent" *ngIf="!userIsAuthenticated"><span routerLink="/create">New Recipe</span></button>
         <br>
         <br>
-        <button mat-raised-button color="accent" class="loginBtn" *ngIf="!userIsAuthenticated"><span routerLink="/login">Login</span></button>
+        <button mat-raised-button color="accent" class="loginBtn" *ngIf="!userIsAuthenticated"><span routerLink="auth/login">Login</span></button>
         <br>
         <br>
-        <button mat-raised-button color="accent" class="loginBtn" *ngIf="!userIsAuthenticated"><span routerLink="/signup">SignUp</span></button>
+        <button mat-raised-button color="accent" class="loginBtn" *ngIf="!userIsAuthenticated"><span routerLink="auth/signup">SignUp</span></button>
         <br>
         <br>
         <button mat-raised-button color="accent" class="loginBtn" (click)="onLogout()" *ngIf="userIsAuthenticated">Logout</button>
