--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -1,29 +1,29 @@
-<form (submit)="onSignUp(signupForm)" #signupForm="ngForm">
-    <mat-card class="signupCard">
-        <mat-card-title>
-            Signup Form
-        </mat-card-title>
-        <mat-card-subtitle>
-            Create our Account
-        </mat-card-subtitle>
-        
+<mat-card class="signupCard">
+    <mat-spinner *ngIf="isLoading"></mat-spinner>
+    <mat-card-title>
+        Signup Form
+    </mat-card-title>
+    <mat-card-subtitle>
+        Create our Account
+    </mat-card-subtitle>
+    <form (submit)="onSignup(signupForm)" #signupForm="ngForm" *ngIf="!isLoading">
+
         <mat-form-field class="example-full-width" appearance="outline">
             <mat-label>Email</mat-label>
-            <input type="email" matInput name="email" ngModel #emailInput="ngModel" required>
+            <input type="email" matInput name="email" ngModel #emailInput="ngModel" required email>
             <mat-error *ngIf="emailInput.invalid">Please enter a valid email.</mat-error>
-          </mat-form-field><br>
-          <mat-form-field class="example-full-width" appearance="outline">
-              <mat-label>Password</mat-label>
-              <input type="password" matInput name="password" ngModel #passwordInput="ngModel" required>
-              <mat-error *ngIf="passwordInput.invalid">Please enter a valid email.</mat-error>
-            </mat-form-field>
-            <hr>
-            <div>
-                <button mat-raised-button color="accent" type="submit">SignUp</button>&nbsp;
-                
-                <button mat-raised-button color="accent" type="reset">Cancel</button>
-            </div>
+        </mat-form-field><br>
+        <mat-form-field class="example-full-width" appearance="outline">
+            <mat-label>Password</mat-label>
+            <input type="password" matInput name="password" ngModel #passwordInput="ngModel" required>
+            <mat-error *ngIf="passwordInput.invalid">Please enter a valid email.</mat-error>
+        </mat-form-field>
+    </form>
+    <hr>
+    <div>
+        <button mat-raised-button color="accent" type="submit" *ngIf="!isLoading">SignUp</button>&nbsp;
 
-    </mat-card>
-    
-  </form>
+        <button mat-raised-button color="accent" type="reset">Cancel</button>
+    </div>
+
+</mat-card>
