--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -13,13 +13,13 @@
         <button mat-raised-button color="accent"><span routerLink="/">Recipe-List</span></button>
         <br>
         <br>
-        <button mat-raised-button color="accent" *ngIf="!userIsAuthenticated"><span routerLink="/create">New Recipe</span></button>
+        <button mat-raised-button color="accent" *ngIf="userIsAuthenticated"><span routerLink="/create" routerLinkActive="mat-accent">New Recipe</span></button>
         <br>
         <br>
-        <button mat-raised-button color="accent" class="loginBtn" *ngIf="!userIsAuthenticated"><span routerLink="/login">Login</span></button>
+        <button mat-raised-button color="accent" class="loginBtn" *ngIf="!userIsAuthenticated"><span routerLink="/auth/login" routerLinkActive="mat-accent">Login</span></button>
         <br>
         <br>
-        <button mat-raised-button color="accent" class="loginBtn" *ngIf="!userIsAuthenticated"><span routerLink="/signup">SignUp</span></button>
+        <button mat-raised-button color="accent" class="loginBtn" *ngIf="!userIsAuthenticated"><span routerLink="/auth/signup" routerLinkActive="mat-accent">SignUp</span></button>
         <br>
         <br>
         <button mat-raised-button color="accent" class="loginBtn" (click)="onLogout()" *ngIf="userIsAuthenticated">Logout</button>
