--- a/src/app/posts/post-list/post-list.component.html
+++ b/src/app/posts/post-list/post-list.component.html
@@ -33,12 +33,14 @@
           {{ post.content }}
         </p>
       </mat-card-content>
-      <mat-card-actions>
+      <mat-card-actions *ngIf="userIsAuthenticated && userId === post.creator">
         <a mat-raised-button color="primary" [routerLink]="['/edit', post.id]">EDIT</a>
           <button mat-raised-button color="warn" (click)="onDelete(post.id)">DELETE</button>
       </mat-card-actions>
     </mat-card> 
-    <p class="info-text mat-body-1" *ngIf="posts.length <= 0 && !isLoading">No posts added yet!</p>
+    <mat-paginator [length]="totalPosts" [pageSize]="postsPerPage" [pageSizeOptions]="pageSizeOptions" (page)="onChangedPage($event)"
+  *ngIf="posts.length > 0"></mat-paginator>
+<p class="info-text mat-body-1" *ngIf="posts.length <= 0 && !isLoading">No posts added yet!</p>
   </div>
 
 
